# alidade

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  local.env.example  pyproject.toml
.claude/: settings.json
.claude/hooks/: layer-modified.sh
BufferAndQuery/: BufferAndQuery.qgs  project.py  workflow.md
BufferAndQuery/data/: USAParks.dbf  USAParks.sbn  USAParks.sbx  USAParks.shx  state_Capitol_bldgs.sbn  state_Capitol_bldgs.shp
BufferAndQuery/layers/: national_parks.py  openstreetmap.py  state_capitol_bldgs.py  usaparks.py
BufferAndQuery/styles/: base.qgs  openstreetmap.xml
alidade/: __init__.py  build.py  capture.py  dump.py  extent.py  models.py  readme.py  render.py  validate.py
alidade/util/: base.qgs  claude_toolbox.py  export_pdf.py  qgis_startup.py
projects/BufferAndQuery/: README.md  helpers.py  project.py  workflow.md
projects/XY_projections/: Practice_XYProjections.qgz  README.md  main.py  project.py  workflow.md
projects/XY_projections/styles/: base.qgs  (+4 more)
projects/lab4/: README.md  main.py  project.py  util.py  workflow.md
projects/sample/: project.py  sample.qgz  workflow.md
sample/: project.py
sample/data/: park_polygon.geojson
sample/layers/: arp_slope.py  cartodb_positron.py  elevation.py  elevation_10n.py  esri_satellite.py  park_features_symbol_lines.py  park_polygon.py  unique_values_table.py
sample/styles/: arp_areas.xml  arp_slope.xml  elevation.xml  elevation_10n.xml  esri_satellite.xml  park_features_symbol_lines.xml  park_features_symbol_points.xml  park_features_symbol_polygons.xml  park_polygon.xml  slope.xml
(+74 files in other folders)
