[project]
name = "alidade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "lxml>=6.1.0",
    "pydantic>=2.13.4",
    "pyproj>=3.7.2",
]

[tool.black]
line-length = 88
extend-exclude = ".venv"
