[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alidade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "geopandas>=1.1.3",
    "lxml>=6.1.0",
    "mypy>=2.1.0",
    "qgis-stubs>=0.2.0",
    "types-geopandas>=1.1.3",
    "pydantic>=2.13.4",
    "pyproj>=3.7.2",
    "mapclassify>=2.10.0",
    "geopy>=2.4.1",
]

[project.scripts]
alidade-build = "alidade.build:main"
alidade-dump = "alidade.dump:main"
alidade-extent = "alidade.extent:main"
alidade-validate = "alidade.validate:main"

[tool.hatch.build.targets.wheel]
packages = ["alidade"]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["qgis.PyQt.*", "qgis.utils"]
ignore_missing_imports = true

[tool.black]
line-length = 88
extend-exclude = ".venv"
